- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5460] Clean up the use of FlashMessageService
- [#5417] Require static_info_tables >= 6.2.0
- [#5408] Drop version-specific code and class_exists
- [#5407] Drop the old XCLASS footers

Changes:
- [#5463] Change t3lib_TCEmain to \TYPO3\CMS\Core\DataHandling\DataHandler
- [#5462] Change t3lib_l10n_parser_Llxml to LocallangXmlParser
- [#5451] Rename tx_oelib_Model_FrontEndUser to Tx_Oelib_Model_FrontEndUser
- [#5447] Rename tx_oelib_Interface_MailRole to Tx_Oelib_Interface_MailRole
- [#5438] Change tslib_cObj to ContentObjectRenderer
- [#5437] Change tslib_pibase to \TYPO3\CMS\Frontend\Plugin\AbstractPlugin
- [#5428] Change t3lib_TimeTrackNull to NullTimeTracker
- [#5436] Change t3lib_cs to \TYPO3\CMS\Core\Charset\CharsetConverter
- [#5433] Change t3lib_basicFileFunctions to \TYPO3\CMS\Core\Utility\File\BasicFileUtility
- [#5427] Change tslib_fe to TypoScriptFrontendController
- [#5426] Change t3lib_beUserAuth to BackendUserAuthentication
- [#5439] Change t3lib_SCbase to \TYPO3\CMS\Backend\Module\BaseScriptClass
- [#5459] Change t3lib_FlashMessageQueue to \TYPO3\CMS\Core\Messaging\FlashMessageQueue
- [#5430] Change t3lib_extMgm to \TYPO3\CMS\Core\Utility\ExtensionManagementUtility
- [#5458] Change t3lib_iconworks to \TYPO3\CMS\Backend\Utility\IconUtility
- [#5457] Change t3lib_FlashMessage to \TYPO3\CMS\Core\Messaging\FlashMessage
- [#5456] Change t3lib_exception to \UnexpectedValueException
- [#5455] Change t3lib_BEfunc to TYPO3\CMS\Backend\Utility\BackendUtility
- [#5425] Change t3lib_div to \TYPO3\CMS\Core\Utility\GeneralUtility
- [#5418] Drop the css_styled_content requirement
- [#5406] Require TYPO3 6.2 and PHP 5.5
- [#5401] Mark the extension as stable
- [#5399] Document the new FORMidable in the upgrade notes


0.10.0 (released 2015-08-22)

Features:
- [#5379] Make the Excel-specific CSV line configurable