@@ -16,6 +16,7 @@ Cleanup:
 - [#5407] Drop the old XCLASS footers
 
 Changes:
+- [#5464] Change t3lib_refindex to \TYPO3\CMS\Core\Database\ReferenceIndex
 - [#5463] Change t3lib_TCEmain to \TYPO3\CMS\Core\DataHandling\DataHandler
 - [#5462] Change t3lib_l10n_parser_Llxml to LocallangXmlParser
 - [#5451] Rename tx_oelib_Model_FrontEndUser to Tx_Oelib_Model_FrontEndUser
